--- a/protection-candle.html
+++ b/protection-candle.html
@@ -146,7 +146,9 @@
 
           <!-- Short tagline -->
           <p class="text-muted mb-2">
-            Hand-poured reiki-infused protection spell candle.
+            The Protection Candle is designed to create a calming aura, 
+            promoting positive energy while releasing a soothing scent. 
+            Perfect for enhancing relaxation and mindfulness in any space.
           </p>
 
           <!-- Price -->
