--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               name="q"
               class="form-control me-2"
               type="search"
-              placeholder="Search products"
+              placeholder="Search"
               aria-label="Search"
             />
             <button
