--- a/protection-candle.html
+++ b/protection-candle.html
@@ -128,7 +128,7 @@
     <div class="row g-4">
       <!-- LEFT: Product Image -->
       <div class="col-12 col-md-6">
-        <div class="card product-image-card h-100 shadow-sm">
+        <div class="card product-image-card h-100 shadow-sm border-0">
           <img
             src="protection-candle-img.png"
             class="card-img-top"
