--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </form>
 
           <!-- 🛒 Cart summary added here -->
-          <div class="cart-summary text-end">
+          <div class="cart-summary text-center">
             <a href="cart.html" class="text-decoration-none position-relative" title="View cart">
               <i class="bi bi-cart4 fs-5 cart-icon">
                 <span
@@ -69,7 +69,7 @@
               </i>
             </a>
             <div class="small text-secondary mt-1">
-              <span id="cartTotal">$0.00</span>
+              <span id="cartTotal" class="text-center">$0.00</span>
             </div>
           </div>
           <!-- /Cart summary -->
@@ -234,7 +234,7 @@
     <div class="row g-3">
       <!-- Chakra Water -->
       <div class="col-12 col-sm-6 col-lg-3">
-        <div class="card product-card h-100">
+        <div class="card product-card h-100 rounded-4">
           <a href="chakra-water.html">
             <img src="chakra-water.png" class="card-img-top item-img" alt="Chakra Water">
           </a>
@@ -281,7 +281,7 @@
 
       <!-- Protection Candle -->
       <div class="col-12 col-sm-6 col-lg-3">
-        <div class="card product-card h-100">
+        <div class="card product-card h-100 rounded-4">
           <a href="protection-candle.html">
             <img src="protection-candle-img.png" class="card-img-top item-img" alt="Protection Candle">
           </a>
@@ -321,32 +321,6 @@
             </div>
             </div>
             
-          </div>
-        </div>
-      </div>
-
-      <!-- Another Protection Candle (variant / set) -->
-      <div class="col-12 col-sm-6 col-lg-3">
-        <div class="card product-card h-100">
-          <a href="protection-candle.html">
-            <img src="protection-candle-img.png" class="card-img-top item-img" alt="Protection Candle Set">
-          </a>
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title mb-1">Protection Candle Set</h5>
-            <p class="text-muted mb-2">Bundle of protection candles, perfect for gifting.</p>
-            <p class="fw-bold mb-0">$29.99</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Generic placeholder for future product -->
-      <div class="col-12 col-sm-6 col-lg-3">
-        <div class="card product-card h-100">
-          <img src="bottle-4.jpg" class="card-img-top item-img" alt="Featured Product">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title mb-1">Featured Bottle</h5>
-            <p class="text-muted mb-2">A spotlight item from your collection.</p>
-            <p class="fw-bold mb-0">$19.99</p>
           </div>
         </div>
       </div>
