--- a/admin.dashboard.html
+++ b/admin.dashboard.html
@@ -46,7 +46,7 @@
 
   <body class="p-4">
     <div class="container">
-      <h1 class="mb-4">Store — Admin Dashboard</h1>
+      <h1 class="mb-4">DotMart — Admin Dashboard</h1>
 
       <!-- ========================= -->
       <!--       SITE STATISTICS     -->
