--- a/chakra-water.html
+++ b/chakra-water.html
@@ -22,51 +22,6 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
   >
-
-  <style>
-    body {
-      background-color: var(--bs-body-bg);
-    }
-
-    .navbar {
-      box-shadow: 0 6px 18px rgba(15, 23, 42, 0.08);
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      font-size: 0.95rem;
-    }
-
-    .navbar-brand span {
-      color: var(--bs-primary);
-    }
-
-    .searchBar {
-      max-width: 340px;
-      width: 100%;
-    }
-
-    @media (max-width: 768px) {
-      .searchBar {
-        margin-top: 0.75rem !important;
-        width: 100%;
-      }
-    }
-
-    .product-image-card img {
-      object-fit: cover;
-      width: 100%;
-      max-height: 420px;
-    }
-
-    .section-title {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-bottom: 0.5rem;
-    }
-  </style>
 </head>
 <body>
   <!-- NavBar -->
@@ -74,7 +29,7 @@
     <div class="container-fluid px-3 px-md-4">
 
       <a title="Home" href="index.html" class="me-2">
-        <i class="navBtn bi bi-house-door-fill fs-5"></i>
+        <i class="navBtn bi bi-house-door fs-5"></i>
       </a>
 
       <a class="navbar-brand me-3" href="index.html">
@@ -103,7 +58,7 @@
           </form>
 
           <!-- 🛒 Cart summary added here -->
-          <div class="cart-summary text-end">
+          <div class="cart-summary text-center">
             <a href="cart.html" class="text-decoration-none position-relative" title="View cart">
               <i class="bi bi-cart4 fs-5 cart-icon">
                 <span
@@ -113,7 +68,7 @@
               </i>
             </a>
             <div class="small text-secondary mt-1">
-              <span id="cartTotal">$0.00</span>
+              <span id="cartTotal" class="text-center">$0.00</span>
             </div>
           </div>
           <!-- /Cart summary -->
