--- a/protection-candle.html
+++ b/protection-candle.html
@@ -23,57 +23,11 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
   >
 
-  <style>
-    body {
-      background-color: var(--bs-body-bg);
-    }
-
-    .navbar {
-      box-shadow: 0 6px 18px rgba(15, 23, 42, 0.08);
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      font-size: 0.95rem;
-    }
-
-    .navbar-brand span {
-      color: var(--bs-primary);
-    }
-
-    .searchBar {
-      max-width: 340px;
-      width: 100%;
-    }
-
-    @media (max-width: 768px) {
-      .searchBar {
-        margin-top: 0.75rem !important;
-        width: 100%;
-      }
-    }
-
-    .product-image-card img {
-      object-fit: cover;
-      width: 100%;
-      max-height: 420px;
-    }
-
-    .section-title {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-bottom: 0.5rem;
-    }
-  </style>
 </head>
 <body>
 
-  <!-- ===================== -->
-  <!--     NAVBAR / HEADER   -->
-  <!-- ===================== -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top mb-3">
+  <!-- NavBar -->
+  <nav class="navbar navbar-expand bg-body-tertiary sticky-top">
     <div class="container-fluid px-3 px-md-4">
 
       <a title="Home" href="index.html" class="me-2">
@@ -81,22 +35,12 @@
       </a>
 
       <a class="navbar-brand me-3" href="index.html">
-        <span>Store</span> Name
+        <span>Dot</span>Mart
       </a>
 
-      <button
-        title="Main Menu"
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mainNavbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
       <div class="collapse navbar-collapse" id="mainNavbar">
-        <div class="ms-auto d-flex flex-column flex-md-row align-items-md-center gap-3">
-          <form class="searchBar d-flex mt-3 mt-md-0" role="search" action="search.html" method="GET">
+        <div class="ms-auto d-flex flex-row align-items-md-center gap-3">
+          <form class="searchBar d-flex" role="search" action="search.html" method="GET">
             <input
               id="searchInput"
               name="q"
@@ -115,6 +59,21 @@
             </button>
           </form>
 
+          <!-- 🛒 Cart summary added here -->
+          <div class="cart-summary text-center">
+            <a href="cart.html" class="text-decoration-none position-relative" title="View cart">
+              <i class="bi bi-cart4 fs-5 cart-icon">
+                <span
+                  id="cartBadge"
+                  class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                ></span>
+              </i>
+            </a>
+            <div class="small text-secondary mt-1">
+              <span id="cartTotal" class="text-center">$0.00</span>
+            </div>
+          </div>
+          <!-- /Cart summary -->
         </div>
       </div>
 
@@ -158,6 +117,34 @@
           <p id="stock-protectionCandle" class="text-muted small mb-3">
             <!-- JS fills this with "In stock: X" or "Out of stock" -->
           </p>
+
+          <div class="mt-auto d-flex d-md-none justify-content-center">
+            <div class="btn-group btn-group-sm" role="group">
+            <button 
+              title="remove"
+              type="button" 
+              class="btn btn-outline-danger" 
+              onclick="changeQty('protectionCandle', -1)">
+              <i class="bi bi-dash"></i>
+            </button>
+
+            <button 
+              type="button" 
+              class="btn btn-outline-secondary" 
+              disabled 
+              id="qty-protectionCandle">
+              0
+            </button>
+
+            <button 
+              title="add"
+              type="button" 
+              class="btn btn-outline-success" 
+              onclick="changeQty('protectionCandle', 1)">
+              <i class="bi bi-plus"></i>
+            </button>
+            </div>
+            </div>
 
           <hr>
 
@@ -212,14 +199,36 @@
             </small>
           </div>
 
+          <div class="mt-auto d-md-flex d-none  justify-content-start mb-3">
+            <div class="btn-group btn-group-sm" role="group">
+            <button 
+              title="remove"
+              type="button" 
+              class="btn btn-outline-danger" 
+              onclick="changeQty('protectionCandle', -1)">
+              <i class="bi bi-dash"></i>
+            </button>
+
+            <button 
+              type="button" 
+              class="btn btn-outline-secondary" 
+              disabled 
+              id="qty-protectionCandle">
+              0
+            </button>
+
+            <button 
+              title="add"
+              type="button" 
+              class="btn btn-outline-success" 
+              onclick="changeQty('protectionCandle', 1)">
+              <i class="bi bi-plus"></i>
+            </button>
+            </div>
+            </div>
+
           <!-- Action buttons -->
           <div class="mt-auto d-flex flex-wrap gap-2">
-            <a
-              href="https://buy.stripe.com/5kQbJ2cbifFW3DBedPbII01"
-              class="btn btn-outline-success"
-            >
-              Buy Now
-            </a>
             <a href="index.html" class="btn btn-outline-secondary">
               Back to Shop
             </a>
