--- a/new-age.html
+++ b/new-age.html
@@ -191,6 +191,19 @@
   </div>
 
   <!-- HERO BANNER -->
+  <section class="container my-4">
+    <div class="card border-0 text-white">
+      <img src="..." class="card-img w-100" alt="New Age Banner">
+      <div class="card-img-overlay hero-overlay d-flex flex-column justify-content-center align-items-center text-center">
+        <h1 class="display-5 fw-bold mb-2">New Age & Reiki</h1>
+        <p class="lead mb-0">
+          Candles, chakra water, and tools to support calm, focus, and intention.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- HERO BANNER -->
   <section class="container my-4 d-md-none">
     <div class="card border-0 text-white">
       <img src="new-age.png" class="card-img w-100" alt="New Age Banner">
