added images to index.html

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </a>
                   </div>
                   <div class="carousel-item">
-                    <img src="bottle-4.jpg" class="d-block w-100" alt="Bottle">
+                    <img src="candles2.png" class="d-block w-100" alt="Candles">
                   </div>
                 </div>
               </div>
@@ -162,20 +162,20 @@
         <div class="row g-3 h-100">
           <div class="col-12">
             <div class="promo-card card border-0">
-              <img src="winter-sale-25.png" alt="Winter Sale 25%" class="card-img-top rounded-4">
+              <img src="chrismas-sale.png" alt="Promo" class="card-img-top rounded-4">
             </div>
           </div>
           <div class="col-6 col-lg-12">
             <div class="promo-card card border-0">
               <a href="#">
-                <img src="..." alt="Promo" class="card-img-top rounded-4">
+                <img src="quality.png" alt="Promo" class="card-img-top rounded-4">
               </a>
             </div>
           </div>
           <div class="col-6 d-none d-lg-block">
             <div class="promo-card card border-0">
               <a href="new-age.html">
-                <img src="new-age.png" alt="New Age" class="card-img-top rounded-4">
+                <img src="jewl.png" alt="Promo" class="card-img-top rounded-4">
               </a>
             </div>
           </div>
@@ -214,11 +214,11 @@
         </a>
       </div>
       <div class="col-12 col-md-4">
-        <a href="#" class="text-decoration-none">
+        <a href="candle.html" class="text-decoration-none">
           <div class="category-card position-relative">
-            <img src="..." alt="#" class="img-fluid rounded-3">
+            <img src="candles.png" alt="Candles" class="img-fluid rounded-3">
             <div class="category-overlay">
-              Arcade & Games
+              Hand -Poured Candles
             </div>
           </div>
         </a>
