--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </a>
                   </div>
                   <div class="carousel-item">
-                    <img src="candles2.png" class="d-block w-100" alt="Candles">
+                    <img src="jewl.png" class="d-block w-100" alt="Candles">
                   </div>
                 </div>
               </div>
